force-app/main/default/objects/Food_Order__c/Food_Order__c.object-meta.xml
<CustomObject>
    <description>A record of a food order, comprising of food items</description>
    <label>Food Order</label>
    <nameField>
        <displayFormat>O-{0000}</displayFormat>
        <label>Order Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Food Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>