force-app/main/default/objects/Food_Order__c/fields/Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Name__c</fullName>
    <description>The name of the customer who placed the order</description>
    <label>Customer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>