force-app/main/default/objects/Food_Order__c/fields/Customer_Phone__c.field-meta.xml
<CustomField>
    <fullName>Customer_Phone__c</fullName>
    <description>The phone number of the customer</description>
    <label>Customer Phone</label>
    <type>Phone</type>
</CustomField>