force-app/main/default/objects/Food_Order__c/fields/Order_Details__c.field-meta.xml
<CustomField>
    <fullName>Order_Details__c</fullName>
    <description>The details of the order in JSON format</description>
    <label>Order Details</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>